force-app/main/default/objects/Bit_Coin_Comparison__c/Bit_Coin_Comparison__c.object-meta.xml
<CustomObject>
    <description>To capture all the comparisons requested</description>
    <label>Bit Coin Comparison</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Bit Coin Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bit Coin Comparisons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>