force-app/main/default/objects/Bit_Coin_Comparison__c/fields/Bit_Coin__c.field-meta.xml
<CustomField>
    <fullName>Bit_Coin__c</fullName>
    <defaultValue>&quot;BTC-Bitcoin&quot;</defaultValue>
    <description>Bitcoin currency</description>
    <label>Bit Coin</label>
    <length>15</length>
    <type>Text</type>
</CustomField>