force-app/main/default/objects/Bit_Coin_Comparison__c/fields/Bit_Coin_Value__c.field-meta.xml
<CustomField>
    <fullName>Bit_Coin_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to capture the bit coin value</description>
    <label>Bit Coin Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>