force-app/main/default/objects/Bit_Coin_Comparison__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>used to capture user&#39;s enquiry of Bit Coin is compared with which currency</description>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>