force-app/main/default/objects/Bit_Coin_Comparison__c/fields/Other_Currency__c.field-meta.xml
<CustomField>
    <fullName>Other_Currency__c</fullName>
    <description>Used to capture the other currency</description>
    <label>Other Currency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>