force-app/main/default/objects/Bit_Coin_Comparison__c/fields/Other_Value__c.field-meta.xml
<CustomField>
    <fullName>Other_Value__c</fullName>
    <description>Used to capture other values</description>
    <label>Other Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>