force-app/main/default/objects/Bit_Coin_Comparison__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bit_Coin__c</columns>
    <columns>Bit_Coin_Value__c</columns>
    <columns>Other_Currency__c</columns>
    <columns>Other_Value__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>